# voyager-cpu

./: .gitignore  .gitmodules  LICENSE.md  README.md  pyproject.toml  sphinx.py
src/sphinxcpu/: __init__.py  core.py  cpu.py  decoder.py  ram.py  utils.py
src/voyagercpu/: cpu.py  decoder.py  example.py  memory.py  ram.py  utils.py
tests/: test_decoder.py  test_programs.py  test_sphinx.py  test_utils.py
tests/official-test-binaries/: rv32ui-p-add  rv32ui-p-add.dump  rv32ui-p-addi  rv32ui-p-addi.dump  rv32ui-p-and  rv32ui-p-and.dump  rv32ui-p-andi  rv32ui-p-andi.dump  rv32ui-p-auipc  rv32ui-p-auipc.dump  rv32ui-p-beq  rv32ui-p-beq.dump  rv32ui-p-bge  rv32ui-p-bge.dump  rv32ui-p-bgeu  rv32ui-p-blt  rv32ui-p-blt.dump  rv32ui-p-bltu  rv32ui-p-bltu.dump  rv32ui-p-bne  rv32ui-p-bne.dump  rv32ui-p-fence_i  rv32ui-p-fence_i.dump  rv32ui-p-jal  rv32ui-p-jalr  rv32ui-p-jalr.dump  rv32ui-p-lb  rv32ui-p-lb.dump  rv32ui-p-lbu  rv32ui-p-lbu.dump  rv32ui-p-lh  rv32ui-p-lh.dump  rv32ui-p-lhu  rv32ui-p-lhu.dump  rv32ui-p-lui  rv32ui-p-lui.dump  rv32ui-p-lw  rv32ui-p-lw.dump  rv32ui-p-or  rv32ui-p-or.dump  (+114 more)
